add content for g1 tune